# MyFirstCProject

./: CMakeLists.txt  help.md
chapter01/: first.c  testMain.c
chapter02/: fathm_ft.c  my_test.c  two_func.c
chapter03/: altnames.c  badcount.c  bases.c  charcode.c  escape.c  floaterr.c  platinum.c  print1.c  print2.c  showf_pt.c  toobig.c  typesize.c
chapter04/: defines.c  flags.c  floatcnv.c  floats.c  input.c  intconv.c  praise1.c  praise2.c  printout.c  printval.c  skiptwo.c  stringf.c  talkback.c  varwide.c  width.c
chapter05/: add_one.c  addemup.c  convert.c  divide.c  golf.c  min_sec.c  pound.c  shoes1.c  shoes2.c  squares.c  wheat.c
chapter06/: cmpflt.c  do_while.c  forTest.c  nest_loop.c  power.c  scores_in.c  summing.c
chapter07/: animals.c  break.c  codedays.c  cypher1.c  cypher2.c  divisors.c  goto.c  paint.c  skippart.c  wordcount.c
chapter08/: book.txt  echo.c  echo_eof.c  file_eof.c  grade.c  guess.c  menuette.c  showchar1.c  showchar2.c
chapter09/: binary.c  factor.c  hotel.c  hotel.h  lesser.c  loccheck.c  recur.c  swap1.c  swap3.c  usehotel.c
chapter10/: adddata.c  array2.c  day_mon1.c  day_mon2.c  day_month3.c  dereference.c  designate.c  flc.c  handleArray.c  order.c  pnt_addr.c  pointer_opts.c  rain.c  sum_arr.c  sum_arr2.c  varaar2.c  zippo1.c  zippo2.c
chapter11/: address.c  arguments.c  arrchar.c  compare.c  copy2.c  copy3.c  dont.c  fgets1.c  fgets2.c  fgets3.c  getsputs.c  join_chk.c  mod_str.c  my_func.c  my_string.c  p_and_s.c  put_out.c  quit_chk.c  s_gets.c  scan_str.c  sort_str.c  sprintf.c  star_search.c  str_cat.c  test.c  (+5 more)
(+67 files in other folders)
